@@ -45,3 +45,8 @@ HibernatePanel.toObtainSessionFact=To obtain a Hibernate SessionFactoryImpl inst
 
 HibernatePanel.toObtainSessionFactConfiguration=Call "new org.hibernate.cfg.Configuration().configure().buildSessionFactory();"
 HibernatePanel.toObtainSessionFactFactoryProvider=Invoke the user defined provider method below:
+
+HibernateController.noPersistenceUnitName=Missing Persitence-Unit name .\nChanges cannot be applied.
+
+HibernatePanel.toObtainSessionFactJPA=Call "javax.persistence.Persistence.createEntityManagerFactory("<persitence-unit name>");"
+HibernatePanel.toObtainSessionFactPersUnit=persitence-unit name:
